# MachineLearningNanodegree

./: .gitignore  README.md  pyproject.toml
Project_Plagiarism_Detection/: 1_Data_Exploration.ipynb  2_Plagiarism_Feature_Engineering.ipynb  3_Training_a_Model.ipynb  helpers.py
Project_Plagiarism_Detection/source_sklearn/: train.py
Sentiment Analysis Web App/: SageMaker Project.ipynb  report.html
Sentiment Analysis Web App/serve/: predict.py  utils.py
Sentiment Analysis Web App/train/: model.py  train.py
Sentiment Analysis Web App/website/: index.html
