[tool.poetry]
name = "udacity"
version = "0.1.0"
description = "Machine Learning Nanodegree program"
authors = ["Ennio <nascaennio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
numpy = "^1.18.2"
scikit-learn = "^0.22.2"
nltk = "^3.4.5"
beautifulsoup4 = "^4.8.2"
notebook = "^6.0.3"
tqdm = "^4.45.0"
sagemaker = "^1.55.0"
jupyterthemes = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
